V 
* features
- 
* bug fixes
-

V 
* features
- ask before deleting autoload configuration
- change networkmode (2G/3G) on wifi connected
- manually change profile
* bug fixes
- fix manual service changes for networkmode (2G/3G)

V 2.6.4
* features
- 
* bug fixes
- fix force close

V 2.6.4
* features
- 
* bug fixes
- fix force close

V 2.6.3
* features
- 
* bug fixes
- fix crash on boot

V 2.6.2
* features
- 
* bug fixes
- fix force closes

V 2.6.1
* features
- 
* bug fixes
- fix force closes
* internal
- Check networkmode before changing it
- Handle concurency in DB cache

V 2.6.0
* features
- save current config on change
- close configuration manager after load if called directly
- menu reorganisation
- display changelog
* bug fixes
- fix cancel editor if inserting
- fix force close in configuration autoloading
* internal
- cache DB access

V 2.5.0
* features
- enable/disable cpus (for mulitcore devices and still a beta feature)
* bug fixes
- fix apply virtual governor to profile
- apply to system after changing trigger, profile or governor

V 2.4.0
* features
- Use spinner to choose frequencies
* bug fixes
- Greek translation update
- fix jumping profile editor

V 2.3.2 
* features
- 
* bug fixes
- fix crash on start

V 2.3.1
* features
-
* bug fixes
- fixed crash on start bug (finally and hopefully)
- German translation update
- Italian translation update

V 2.3.0
* features
- handle multicore devices (beta feature)
* bug fixes
- autoload configuration does not get saved

V 2.2.3 
* features
- 
* bug fixes
- fix forcecloses

V 2.2.2
* features
- autoload based on weekdays 
- delete autoload configurations
- fix trigger list layout with long profile names
* bug fixes
- fix force close in autoload editor

V 2.2.1
* features
- 
* bug fixes
- really do exact scheduling
- fix profile editor layout
- fixed force close in autoload editor 

V 2.2.0
* features
- time-specific configurations (autoloading configurations)
- backup/restore settings to cloud