@@ -267,7 +267,6 @@ public class SettingsPreferenceActivity extends PreferenceActivity {
 		prefMinSensibleFrequency.setEnabled(!(settings.isBeginnerUser() || settings.isPowerUser()));
 		findPreference("prefKeyUseVirtualGovernors").setEnabled(!settings.isBeginnerUser());
 		findPreference("prefKeyEnableUserspaceGovernor").setEnabled(settings.isPowerUser());
-		findPreference("prefKeyMulticore").setEnabled(settings.isEnableBeta());
 	}
 
 	@Override
